--- a/문제해결기법/문제해결기법.vcxproj.filters
+++ b/문제해결기법/문제해결기법.vcxproj.filters
@@ -30,6 +30,15 @@
     <ClCompile Include="0908PR_2-1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="0908PR_2-2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="12.1-1a.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="12.1-2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
